--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,8 @@ form .avatar {
 
 .navbar .container-avatar img,
 .pub_image .container-avatar img{
-	position: relative;
+	width: 100%;
 	height: 100%;
-	left: -8.5px;
 }
 
 .pub_image {
@@ -64,11 +63,30 @@ form .avatar {
 	flex-flow: row wrap;
 }
 
-.user_desc .container-avatar {
+.pub_menu {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-flow: row wrap;
+}
+
+.pub_menu .left {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-flow: row wrap;
+}
+
+.actions a {
+	margin-right: 8px;
+}
+
+
+.container-avatar {
 	margin-right: 10px;
 }
 
-.user_desc .data-user a{
+.data-user a{
 	font-weight: bold;
 	color: #444;
 	text-decoration: none;
@@ -163,4 +181,79 @@ form .avatar {
 .perfil .container-avatar img {
 	width: 100%;
 	height: 100%;
+}
+
+.cuenta {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.cuenta .left{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.cuenta .right a{
+	color: white;
+}
+
+.informacion-cuenta h1{
+	font-size: 15px;
+	font-weight: bold;
+	margin-bottom: 0;
+}
+
+.informacion-cuenta h2{
+	font-size: 14px;
+	color: #888;
+	margin-bottom: 0;
+}
+
+.informacion-cuenta p{
+	font-size: 12px;
+	color: #888;
+	margin-bottom: 0;
+}
+
+.cuenta .container-avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 900px;
+	overflow: hidden;
+}
+
+.cuenta .container-avatar img {
+	width: 100%;
+	height: 100%;
+}
+
+.sugerencia {
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 60px;
+	margin-bottom: 40px;
+	color: #444;
+}
+
+.btn-search {
+	margin: 0;
+	padding: 0;
+}
+
+.buscar{
+	margin-bottom: 20px;
+}
+
+.buscador{
+	margin: 0;
+	padding: 0;
+}
+
+.sin-publicaciones {
+	margin-top: 40px;
+	padding-top: 30px;
+	font-weight: bold;
+	color: #999;
 }
